ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4

libbmpi_la_SOURCES = \
src/pi_imp.cpp \
src/pi_tables_imp.cpp \
src/pi_act_prof_imp.cpp \
src/pi_counter_imp.cpp \
src/pi_meter_imp.cpp \
src/pi_learn_imp.cpp \
src/pi_mc_imp.cpp \
src/helpers.hpp \
src/helpers.cpp \
src/logger.hpp \
src/devices.hpp \
src/devices.cpp

#libbmpi_la_LIBADD = \
#$(top_builddir)/src/bm_sim/libbmsim.la

lib_LTLIBRARIES = libbmpi.la